Fixing Cursor appearance on smaller devices.

--- a/src/components/cursor/cursor.module.css
+++ b/src/components/cursor/cursor.module.css
@@ -25,6 +25,7 @@
 }
 
 .cursor, .cursor>div {
+    opacity: 0;
     position: absolute;
     transition-duration: 0.1s;
     transition-timing-function: ease-out;
@@ -44,3 +45,9 @@
 }
 
 .is-locked {}
+
+@media screen and (min-width: 60em) {
+    .cursor {
+        opacity: 1;
+    }
+}
